@@ -1,5 +1,9 @@
 2009-01-05 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * lib/fantasdic/sources/stardict_file.rb: Fixed check_validity.
+
+2009-01-05 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * lib/fantasdic/sources/stardict_file.rb: Added xdxf markup support.
 
     * lib/fantasdic/ui/utils.rb (TextBuffer#insert_pango_markup): Don't need
